--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: nonsence
 email: brycehq@163.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://localhost:4002" # the base hostname & protocol for your site
 twitter_username:
@@ -26,6 +25,11 @@ github_username:  brycehq
 
 # Build settings
 markdown: kramdown
-theme: minima
 
+
+# Set the Sass partials directory, as we're using @imports
+sass:
+  style: :expanded # You might prefer to minify using :compressed
+
+# Set the port for a local test.
 port: 4002
