--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: nonsence
+title: 不忘初心
 email: brycehq@163.com
 description: > # this means to ignore newlines until "baseurl:"
-
+  this is me.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://localhost:4002" # the base hostname & protocol for your site
@@ -33,3 +33,5 @@ sass:
 
 # Set the port for a local test.
 port: 4002
+
+disqus_shortname: 'bryce'
