--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 置身事内
+title: 进取之心
 email: brycehq@163.com
 description: > # this means to ignore newlines until "baseurl:"
   this is me.
